...
            ),
          );
        }
      },
      child: Scaffold(
          floatingActionButton: Visibility(
            key: Key('add_questiion'),
            visible: MediaQuery.of(context).viewInsets.bottom == 0.0,
            child: FloatingActionButton(
              onPressed: () {
                buildBottomSheet(context);
              },
              backgroundColor: Theme.of(context).primaryColor,
...
